# conjugate

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: coverage.yml  docs.yml  publish.yml  tests.yml
conjugate/: _beta_geometric.py  _typing.py  distributions.py  interactive.py  models.py  plot.py
docs/: explorer.md  explorer.py  index.md
docs/examples/: bandit.md  bayesian-update.md  binomial.md  bootstrap.md  generalized-inputs.md  indexing.md  limit.md  linear-regression.md  sampling-distributions.md  scaling-distributions.md  shortest-path-itt.md  sql.md  thompson.md  unsupported-distributions.md  wiki-rental-car.md  wiki-rental-car.py
tests/: test_distributions.py  test_example_plots.py  test_interactive.py
