[project]
name = "conjugate-models"
version = "0.13.0"
description = "Bayesian Conjugate Models in Python"
authors = [{ name = "Will Dean", email = "wd60622@gmail.com" }]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = "MIT"
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "matplotlib",
    "numpy",
    "scipy",
    "packaging",
]

[project.urls]
Homepage = "https://williambdean.github.io/conjugate/"
Repository = "https://github.com/williambdean/conjugate"
Documentation = "https://williambdean.github.io/conjugate/"

[dependency-groups]
dev = [
    "pytest>=7.3.2,<8",
    "pytest-cov>=4.1.0,<5",
    "pandas",
    "pypika>=0.48.9,<0.49",
    "pymc>=5.5.0,<6",
    "ipython==8.10.0",
    "scikit-learn>=1.3.2,<2",
    "tox>=4.11.4,<5",
    "pytest-mpl>=0.16.1,<0.17",
    "polars>=1.29.0",
    "narwhals>=1.39.0",
]
docs = [
    "mkdocs>=1.4.3,<2",
    "mkdocs-marimo>=0.2.1",
    "mkdocs-material>=9.1.17,<10",
    "mkdocstrings[python]>=0.23.0",
]

[tool.uv]
default-groups = [
    "dev",
    "docs",
]

[tool.hatch.build.targets.sdist]
include = [
    "conjugate",
    "conjugate/py.typed",
]

[tool.hatch.build.targets.wheel]
include = [
    "conjugate",
    "conjugate/py.typed",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "--mpl --mpl-baseline-path=tests/example-plots --cov=conjugate --cov-report=xml --cov-report=term-missing"

[tool.tox]
legacy_tox_ini = """
    [tox]
    min_version = 4.0
    isolated_build = true
    env_list =
        py313
        py312
        py311
        py310

    [testenv]
    deps =
        pytest
        pytest-cov
        pytest-mpl
        pypika
    commands = pytest tests
"""
